--- a/src/content/graphos/delivery/checks-reference.mdx
+++ b/src/content/graphos/delivery/checks-reference.mdx
@@ -4,11 +4,11 @@ subtitle: Reference for types of schema changes that checks can detect
 description: GraphOS Schema checks reference for schema changes in your GraphQL schema.
 ---
 
-This reference describes the operation checks statuses you may see in the Studio UI and the schema change types reported by [the Rover CLI `subgraph check` response](./check-configurations#the-check-response).
+This reference describes the operations checks statuses you may see in the Studio UI and the schema change types reported by [the Rover CLI `subgraph check` response](./check-configurations#the-check-response).
 
-## Operation check statuses
+## Operations check statuses
 
-GraphOS classifies [operation checks](./schema-checks#types-of-checks) in Studio with the following statuses:
+GraphOS classifies [operations checks](./schema-checks#types-of-checks) in Studio with the following statuses:
 
 <table class="field-table">
   <thead>
