--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -13,7 +13,7 @@ GraphOS provides _schema linting_ to help you enforce formatting conventions and
   width="500"
 />
 
-- If you set up [schema checks](./schema-checks/) for your graph, linting runs as a separate check type alongside build and operation checks.
+- If you set up [schema checks](./schema-checks/) for your graph, linting runs as a separate check type alongside build and operations checks.
 - You can also perform [one-off linting with the Rover CLI](#one-off-linting-with-the-rover-cli).
 
 <Note>
@@ -60,7 +60,7 @@ Schema linting runs automatically as part of your graph's [schema checks](#linti
 
 ### Linting via schema checks
 
-If you set up [schema checks](./schema-checks) for your graph, schema linting automatically runs as a separate check type alongside build and operation checks. You can view the results of all check types from your graph's **Checks** page in Studio.
+If you set up [schema checks](./schema-checks) for your graph, schema linting automatically runs as a separate check type alongside build and operations checks. You can view the results of all check types from your graph's **Checks** page in Studio.
 For example, the screenshot below shows successful build and operations checks with a failed linting check.
 
 <img
