--- a/src/content/graphos/delivery/schema-proposals/configuration.mdx
+++ b/src/content/graphos/delivery/schema-proposals/configuration.mdx
@@ -172,7 +172,7 @@ You can configure [schema checks](../schema-checks) to include a **Proposals** t
 <img
   src="../../img/schema-proposals/proposal-check-settings.jpg"
   className="screenshot"
-  alt="Proposal check settings in GraphOS Studio"
+  alt="Proposals check settings in GraphOS Studio"
 />
 
 By default, the severity of this task is **Off**. You can select from the following severity levels:
