--- a/src/content/graphos/delivery/schema-proposals/implementation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/implementation.mdx
@@ -39,12 +39,12 @@ Regardless, it's best to run checks before publishing changes to make sure error
 
 ### Ensure changes match an approved proposal
 
-You can [configure schema checks](./configuration/#configure-schema-checks) that run in GraphOS to include a **Proposals** task. Proposal checks verify that the changes a check is running on have matching and approved schema proposals.
+You can [configure schema checks](./configuration/#configure-schema-checks) that run in GraphOS to include a **Proposals** task. Proposals checks verify that the changes a check is running on have matching and approved schema proposals.
 
 <img
   src="../../img/schema-proposals/proposal-check-settings.jpg"
   className="screenshot"
-  alt="Proposal check settings in GraphOS Studio"
+  alt="Proposals check settings in GraphOS Studio"
 />
 
 Configuring the **Proposals** task's severity to **Error** ensures that only changes approved through the proposal process can be published. By setting the severity to **Warning** you can publish changes that haven't been approved and receive warnings about them.
