--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -50,7 +50,7 @@ Now, when your router or server starts up, it automatically begins reporting ope
 
 #### Enhanced reporting with the GraphOS Router
 
-If you use the GraphOS Router to report operation metrics, you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) for more comprehensive insights and operation checks.
+If you use the GraphOS Router to report operation metrics, you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) for more comprehensive insights and operations checks.
 
 ### From a third-party server (advanced)
 
