Update cloud routing screenshots

--- a/src/content/graphos/cloud-routing/dedicated/throughput.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/throughput.mdx
@@ -69,7 +69,7 @@ If you already use GraphOS, you can calculate your required GCUs using the opera
 <img
   className="screenshot"
   alt="GraphOS Studio Insights page with timeframe selection"
-  src="../../img/cloud-dedicated/insights-page.png"
+  src="../../img/cloud-dedicated/insights-page.jpg"
 />
 
 2. Scroll down to the **Request Rate** chart. This chart shows the request rate in requests per minute (RPM).
@@ -79,7 +79,7 @@ If you already use GraphOS, you can calculate your required GCUs using the opera
 <img
   className="screenshot"
   alt="GraphOS Studio Insights Request Rate chart with highlighted peak"
-  src="../../img/cloud-dedicated/request-rate.png"
+  src="../../img/cloud-dedicated/request-rate.jpg"
 />
 
 - In the example above, the peak is **19,000 RPM**.
@@ -123,7 +123,7 @@ Click **Manage Capacity** to the right of **Router Capacity**.
 <img
   className="screenshot"
   alt="GraphOS Studio managed GCUs"
-  src="../../img/cloud-dedicated/manage-capacity.png"
+  src="../../img/cloud-dedicated/manage-capacity.jpg"
 />
 
 Then, select the number of GCUs required and click **Save changes**.
