--- a/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
@@ -36,12 +36,12 @@ Custom domains will be available through self-service in GraphOS Studio later in
 
 Create a CNAME record in your DNS provider that points to your Dedicated variant's [existing subdomain](./quickstart#router-endpoint-url). For example, create a CNAME for `api.mydomain.com` that points to `current--docs-example.apollographos.net`.
 
-You can find your Dedicated variant's subdomain in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) on the **Cloud Router** page under **API Endpoint**.
+You can find your Dedicated variant's subdomain in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) on the **Overview** page under the graph's graph ref.
 
 <img
   className="screenshot"
   alt="A cloud router's endpoint displayed on the Cloud Router page in GraphOS Studio"
-  src="../../img/cloud-dedicated/router-endpoint.png"
+  src="../../img/cloud-routing/router-endpoint.jpg"
 />
 
 <Note>
@@ -57,15 +57,7 @@ If you already have a CNAME record for the custom domain you want to use, [conta
 ### Open a support ticket
 
 Next, open a support ticket requesting Apollo to enable your new CNAME.
-You can open a ticket by clicking the **?** icon in the top right of [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and selecting **Contact Support**.
-
-<img
-  className="screenshot"
-  alt="Requesting a new CNAME in GraphOS Studio"
-  src="../../img/cloud-dedicated/support-ticket.png"
-/>
-
-Your request may take up to two business days to process. Apollo will notify you when your new CNAME is live.
+You can open a ticket by emailing [support@apollographql.com](mailto:support@apollographql.com). Your request may take up to two business days to process. Apollo will notify you when your new CNAME is live.
 
 ## Limitations
 
