--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -70,7 +70,7 @@ Before moving to the next step, add any other GraphQL APIs you want to connect. 
 <img
   className="screenshot"
   alt="The 'Add a subgraph' button in the subgraphs page in GraphOS Studio"
-  src="../../img/cloud-dedicated/add-a-subgraph.png"
+  src="../../img/cloud-dedicated/add-a-subgraph.jpg"
 />
 
 Every router configuration or supergraph schema change—including adding a subgraph—triggers a new [launch](/graphos/delivery/launches/). Every launch automatically deploys new cloud router instances for your supergraph.
@@ -119,12 +119,12 @@ Similarly, any new client applications should use your router's URL.
 
 #### Router endpoint URL
 
-You can find your endpoint URL on the **Cloud router** page in GraphOS Studio.
+You can find your endpoint URL on the **Overview** page under the graph's graph ref in GraphOS Studio.
 
 <img
   className="screenshot"
   alt="A cloud router's endpoint displayed on the Cloud Router page in GraphOS Studio"
-  src="../../img/cloud-dedicated/router-endpoint.png"
+  src="../../img/cloud-routing/router-endpoint.jpg"
 />
 
 <Note>
