Update Operation collections

--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -400,13 +400,4 @@ The [GraphOS Studio Explorer](../explorer/) provides enhanced support for workin
 
 ## Viewing composition errors
 
-If a supergraph's most recent set of subgraph schemas failed to compose, a **BUILD FAILED** label is shown at the top of the supergraph's page in Studio:
-
-<img
-  class="screenshot"
-  src="../../img/composition-failed.jpg"
-  alt="Studio screenshot showing a supergraph with a failed composition state"
-  width="500"
-/>
-
-You can click this label to view the errors that must be resolved before composition can succeed. Refer to the [composition error reference](/federation/errors/) for more information.
+If a supergraph's most recent set of subgraph schemas failed to compose, a **BUILD FAILED** label is shown at the top of the supergraph's page in Studio. You can click this label to view the errors that must be resolved before composition can succeed. Refer to the [composition error reference](/federation/errors/) for more information.
