Update images organization

--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -76,7 +76,7 @@ After you create a [cloud supergraph](./#cloud-supergraphs) (or a new variant of
 <img
   class="screenshot"
   alt="List of subgraphs for a cloud supergraph in Studio"
-  src="../../img/subgraph-list.jpg"
+  src="../../img/subgraph/list.jpg"
   width="600"
 />
 
@@ -122,7 +122,7 @@ From your variant's Subgraphs page, you can modify an existing subgraph's routin
    <img
      class="screenshot"
      alt="Menu for additional subgraph options in Studio"
-     src="../../img/subgraph-menu.jpg"
+     src="../../img/subgraph/menu.jpg"
      width="450"
    />
 
@@ -167,7 +167,7 @@ You can delete an existing subgraph from a variant of your cloud supergraph. If 
    <img
      class="screenshot"
      alt="Menu for additional subgraph options in Studio"
-     src="../../img/subgraph-menu.jpg"
+     src="../../img/subgraph/menu.jpg"
      width="450"
    />
 
