--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -270,7 +270,7 @@ To distinguish between instances of the same graph running in different environm
 
 Each of your graph's variants is shown in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content):
 
-<img src="../../img/graph-variants.jpg" className="screenshot" alt="Schema Changelog tab" width="400" />
+<img src="../../img/management/graph-variants.jpg" className="screenshot" alt="Schema Changelog tab" width="400" />
 
 ### Creating a variant
 
