--- a/src/content/graphos/basics/quickstart/next-steps.mdx
+++ b/src/content/graphos/basics/quickstart/next-steps.mdx
@@ -164,7 +164,7 @@ If you've created a Studio organization to collaborate with your team, invite yo
 A supergraph variant's **Clients** page enables you to view operation metrics, segmented by your different clients:
 
 <img
-  src="../../img/client-awareness.jpg"
+  src="../../img/insights/client-awareness.jpg"
   className="screenshot"
   alt="Client awareness overview"
   width="400"
