--- a/src/content/graphos/delivery/contract-setup.mdx
+++ b/src/content/graphos/delivery/contract-setup.mdx
@@ -250,7 +250,7 @@ On your graph's **Checks** page in Studio, contract checks appear as **Downstrea
 <img
   className="screenshot"
   alt="Downstream checks shown in Studio UI"
-  src="../img/contract-check-ui.jpg"
+  src="../img/schema-checks/contract-check-ui.jpg"
 />
 
 Click the **Downstream** item in the **Tasks** column to view a summary of all contract checks that ran.
