--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -14,7 +14,7 @@ Refer to the [pricing page](https://www.apollographql.com/pricing#data-retention
 You can analyze the [field metrics sent by your graph](./sending-operation-metrics/#reporting-field-usage) to GraphOS from any variant's **Insights** page in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content):
 
 <img
-  src="../img/insights-fields.jpg"
+  src="../img/insights/fields.jpg"
   className="screenshot"
   alt="The Insights page in GraphOS Studio"
   width="700"
@@ -34,7 +34,7 @@ This guide focuses on field metrics and information. Refer to [Operation metrics
 The collapsible left sidebar on the **Insights** page lets you filter field types you want to view usage metrics for:
 
 <img
-  src="../img/field-filters.jpg"
+  src="../img/insights/field-filters.jpg"
   class="screenshot"
   alt="Field Insights page left sidebar"
   width="300"
@@ -102,7 +102,7 @@ When you click a field name, you open detailed information for that field in the
 Below that, you can view the field definitions within your subgraph schema.
 
 <img
-  src="../img/field-insights.jpg"
+  src="../img/insights/field-insights.jpg"
   class="screenshot"
   alt="Field Insights page"
 />
@@ -132,7 +132,7 @@ For each of these columns to appear on the **Insights** page, your GraphQL serve
 Take a look at the **Requests** and **Executions** for an example field:
 
 <img
-  src="../img/field-requests-executions.jpg"
+  src="../img/insights/requests-executions.jpg"
   class="screenshot"
   alt="Insights page in Studio"
   width="700"
