--- a/src/content/graphos/org/index.mdx
+++ b/src/content/graphos/org/index.mdx
@@ -19,7 +19,7 @@ You create your first organization as part of the [account creation process](../
 You can create additional organizations by clicking **Create a new organization** at the bottom of your organization dropdown in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content):
 
 <img
-  src="../img/organization-list.jpg"
+  src="../img/management/organization-list.jpg"
   className="screenshot"
   alt="Studio organization list"
   width="300"
