--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -16,7 +16,7 @@ You can check your organization's current plan in GraphOS Studio. From your orga
 <img
   className="screenshot"
   alt="The Plan and Billing section in GraphOS Studio"
-  src="../img/plan-and-billing.jpg"
+  src="../img/management/plan-and-billing.jpg"
 />
 
 ## Current plans
@@ -95,12 +95,6 @@ If your organization is on one of these plans, we strongly recommend [upgrading 
 
 To create cloud supergraphs, your Apollo organization needs to be on either the **Serverless (Free)** plan or the **Serverless** plan.
 
-**If your organization is on the legacy Free plan,** you can convert your organization to the current **Serverless (Free)** plan by clicking **Convert to Serverless (Free)** in the top-right corner of your organization's page in Studio:
+- **If your organization is on the legacy Free plan,** you can convert your organization to the current **Serverless (Free)** plan by clicking **Convert to Serverless (Free)** in the top-right corner of your organization's page in Studio.
 
-<img
-  className="screenshot"
-  alt="A screenshot of the Convert to Serverless (Free) button"
-  src="../img/convert-to-serverless.jpg"
-/>
-
-**If you're on the legacy Team plan**, you currently need to create a new organization to be able to create cloud supergraphs.
+- **If you're on the legacy Team plan**, you currently need to create a new organization to be able to create cloud supergraphs.
