--- a/src/content/graphos/metrics/client-awareness.mdx
+++ b/src/content/graphos/metrics/client-awareness.mdx
@@ -17,7 +17,7 @@ To enable client awareness, your clients must identify themselves in their reque
 You view client-segmented metrics from a variant's **Clients** page in Studio:
 
 <img
-  src="../img/client-awareness.jpg"
+  src="../img/insights/client-awareness.jpg"
   className="screenshot"
   alt="Client awareness overview"
   width="400"
