More screenshot updates

--- a/src/content/graphos/basics/graphs/updating.mdx
+++ b/src/content/graphos/basics/graphs/updating.mdx
@@ -57,7 +57,7 @@ The method you use to update your router depends on which type of supergraph you
   - You can see which router version you're running from the **Cloud Router** section of your variant's Settings page in [Studio](https://studio.apollographql.com/?referrer=docs-content):
 
   <img
-    src="../../img/router/status.jpg"
+    src="../../img/router/cloud-router-details.jpg"
     class="screenshot"
     width="200"
     alt="Router status for cloud supergraph"
