Add CTA for experimental OTel tracing.

--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -50,7 +50,8 @@ Now, when your router or server starts up, it automatically begins reporting ope
 
 #### Enhanced reporting with the GraphOS Router
 
-If you use the GraphOS Router to report operation metrics, you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) for more comprehensive insights and operation checks.
+- If you use the GraphOS Router to report operation metrics, you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) for more comprehensive insights and operation checks.
+- If you use the GraphOS Router to report traces to Studio, you can enable [enhanced tracing](/router/configuration/overview#enhanced-tracing-in-studio-via-opentelemetry) to get additional spans and attributes in traces.
 
 ### From a third-party server (advanced)
 
