--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -115,7 +115,7 @@ To add a subgraph to your supergraph with Rover, you publish the subgraph's sche
 
 ### Modifying a subgraph
 
-From your variant's Subgraphs page, you can modify an existing subgraph's routing URL:
+From your variant's **Subgraphs** page, you can modify an existing subgraph's routing URL:
 
 1. Open the **•••** menu for the subgraph you want to modify:
 
