--- a/src/content/graphos/explorer/subscriptions-explorer.mdx
+++ b/src/content/graphos/explorer/subscriptions-explorer.mdx
@@ -36,7 +36,7 @@ Remember that the path and protocol of your subscriptions URL might differ from 
 
 ## Executing a subscription
 
-You define a subscription operation in the Explorer's Operation panel, just as you do for a query or mutation.
+You define a subscription operation in the Explorer's **Operation** panel, just as you do for a query or mutation.
 When you run the subscription, a **Subscriptions** panel appears in the bottom right that updates as new data arrives:
 
 <img
