--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -70,17 +70,7 @@ You can prepopulate your embedded Explorer with an operation from one of your ex
 - Any variable names and values defined in the operation's associated tab that are used by the operation
 - All header names and values defined in the operation's associated tab
 
-To prepopulate a default operation, use one of the following methods:
-
-#### Option 1
-
-Open the **•••** menu next to an operation and click **Embed this operation**:
-
-<img class="screenshot" src="../img/explorer/embed-definition-menu.jpg" alt="Explorer embed link" width="300" />
-
-#### Option 2
-
-Open the share dropdown in the Explorer and select **Share as embed**:
+To prepopulate a default operation, open the share dropdown in the Explorer and select **Share as embed**:
 
 <img class="screenshot" src="../img/explorer/embed-share-dropdown.jpg" alt="Explorer embed dropdown" width="300" />
 
