Update insights images

--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -497,7 +497,7 @@ If you want to delete an operation, you must do so from Studio. From the **Persi
 <img
   className="screenshot"
   alt="Persisted query list operation actions in Studio"
-  src="../../img/operation-actions.jpg"
+  src="../../img/pq-operation-actions.jpg"
 />
 
 You should only delete operations that are problematic and shouldn't be executed. Even for such operations, it's important to recognize that operation deletions can cause application errors for legitimate clients, depending on your router's [security level](#router-security-levels) and if the client is sending full operation strings or operation IDs.
