--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -109,7 +109,7 @@ Below that, you can view the field definitions within your subgraph schema.
 
 Next, you see which clients and operations contribute to the field's usage. Each row in the **Clients & Operations** table shows a client that requested the field, the number of operations that used the field the client made, and the total number of requests the client made. Selecting a client shows more details about the operations that requested and executed the field.
 
-Below Clients & Operations, you can view visualizations for the field's request rate, latency distribution, and error metrics.
+Below **Clients & Operations**, you can view visualizations for the field's request rate, latency distribution, and error metrics.
 
 ### Field requests and executions
 
